//Changelog.txt

//James 2/24/2016 6:30pm
	-Added the initial code for the start menu. 
	-Player presses "P" to get the menu to appear. Need to figure out how to keep the menu on the screen instead of toggling on and off with the key press. 
	-Also, the menu is moving up and to the left so you can see the whole thing until I resize it for the game.

//Juri Kiin 2/29/2016 10:07
	- Added move method: makes character move around the screen without boarders at the edge of the window.
	- Also added pause method. Press P to pause and will resume via button (Not implemented)
	- Added Enemy.cs -- Has paramaterized constructor for the enemy attributes.

//James Friedenberg 3/2/2016 2:26pm
	-Created class for Buttons
	-Attempted to implement buttons into the pause menu
	-Loaded seperate Texture Files for the button assets so I could give the rectangles that represent the buttons 
	their own coordinates

//Dustin Knowlton 2/29/2016 11:30 
	-Added Camera.cs
	-Camera functions not yet implemented

//James Friedenberg 3/4/2016 4:58pm
	-Created rectangles to represent the buttons in the pause menu
	-Loaded png content to give the button rectangles a texture representation
	-Made if statements for the buttons changing appearance when mouse is over them

//Dustin Knowlton 3/4/2016 5:10pm
	-Started work on combat in enemy class with PlayerAttack function
	-also added a few attributes to Enemy.cs